# oak-hackathon

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/: .gitignore  flat_klp_index.json.gz.dvc  lessons_with_api_updates.json.gz.dvc  mbsse_lp.dvc  oak_json.zip.dvc  oak_scraped_json_curricula_nov24.zip.dvc  oak_scraped_json_nov24.zip.dvc  q_to_klp_sim_stats.csv.gz.dvc  question_json.zip.dvc  sample_lesson.html.dvc  sample_lesson_next_data.json.dvc  test.csv.dvc  units_with_api_updates.json.gz.dvc
data/bm25_scores/: .gitignore  bm25_scores_batchsize_500_batch000000.npz.dvc  bm25_scores_batchsize_500_batch000001.npz.dvc  bm25_scores_batchsize_500_batch000002.npz.dvc  bm25_scores_batchsize_500_batch000003.npz.dvc  bm25_scores_batchsize_500_batch000004.npz.dvc  bm25_scores_batchsize_500_batch000005.npz.dvc  bm25_scores_batchsize_500_batch000006.npz.dvc  bm25_scores_batchsize_500_batch000007.npz.dvc  bm25_scores_batchsize_500_batch000008.npz.dvc  bm25_scores_batchsize_500_batch000009.npz.dvc  bm25_scores_batchsize_500_batch000010.npz.dvc  bm25_scores_batchsize_500_batch000011.npz.dvc  bm25_scores_batchsize_500_batch000012.npz.dvc  bm25_scores_batchsize_500_batch000013.npz.dvc  bm25_scores_batchsize_500_batch000014.npz.dvc  bm25_scores_batchsize_500_batch000015.npz.dvc  bm25_scores_batchsize_500_batch000016.npz.dvc  bm25_scores_batchsize_500_batch000017.npz.dvc  bm25_scores_batchsize_500_batch000018.npz.dvc  bm25_scores_batchsize_500_batch000019.npz.dvc  bm25_scores_batchsize_500_batch000020.npz.dvc  bm25_scores_batchsize_500_batch000021.npz.dvc  bm25_scores_batchsize_500_batch000022.npz.dvc  bm25_scores_batchsize_500_batch000023.npz.dvc  bm25_scores_batchsize_500_batch000024.npz.dvc  bm25_scores_batchsize_500_batch000025.npz.dvc  bm25_scores_batchsize_500_batch000026.npz.dvc  bm25_scores_batchsize_500_batch000027.npz.dvc  bm25_scores_batchsize_500_batch000028.npz.dvc  bm25_scores_batchsize_500_batch000029.npz.dvc  (+62 more)
oakhack/: __init__.py  config.py  constants.py  embeddings.py  utils.py
scripts/: ml_explore-questions.py  mll-segment-transcripts-klp.py  mll_klps_flagging_visu.py  og-json-fom-zip.py  og-test-knowledge-graph.py  og-test-load-lp.py  og-test-transcript-to-lp.py  ri-build-klp-graph.py  ri-embed-questions.py  ri-embedding-similarity.py  ri-explore-questions.py  ri-get-data-from-api.py  ri-json-from-html.py  ri-load-json-data.py  ri-scape-oak-json-ks4.py  ri-scape-oak-json.py  ri-scrape-oak-curricula.py  sj-neo4j-graph.py  sj-segment-transcripts-klp.py  sj-test-bm25-combined.py
(+72 files in other folders)
