[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oakhack"
version = "0.0.1"
description = "Fab Inc Oak National API Hackathon"
authors = [
  { name = "Fab Inc" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
fabdata-llm = { git = "https://github.com/AI-for-Education/fabdata-llm.git", branch = "feature/openrouter" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
black = ">=24.10.0,<25"
flake8 = ">=7.1.1,<8"
isort = ">=5.13.2,<6"
loguru = ">=0.7.2,<0.8"
pip = ">=24.2,<25"
python-dotenv = ">=1.0.1,<2"
tqdm = ">=4.66.5,<5"
typer = ">=0.12.5,<0.13"
pydantic = ">=2.9.2,<3"
scipy = ">=1.14.1,<2"
pandas = ">=2.2.3,<3"
polars = ">=1.9.0,<2"
scikit-learn = ">=1.5.2,<2"
matplotlib = ">=3.9.2,<4"
seaborn = ">=0.13.2,<0.14"
plotly = ">=5.24.1,<6"
dvc = ">=3.55.2,<4"
dvc-azure = ">=3.1.0,<4"
ipykernel = ">=6.29.5,<7"
ipython = ">=8.28.0,<9"
beautifulsoup4 = ">=4.12.3,<5"
lxml = ">=5.3.0,<6"
numpy = ">=2.1.2,<3"
fuzzywuzzy = ">=0.18.0,<0.19"
